fixed style for subtitles on mobile

--- a/src/scss/partials/_custom.scss
+++ b/src/scss/partials/_custom.scss
@@ -85,7 +85,7 @@ a {
         margin: -2px 6px 0;
     }
     .name {
-        margin-right: 25px;
+        margin-right: 30px;
         padding: 10px 15px;
     }
 }
